fix for main being too small

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -31,12 +31,8 @@ body {
   overflow-x: hidden;
 }
 
-#app-container .main {
-  // padding-left: 58px;
-  // width:100%;
-}
-
-.main {
+#app-container .main {  
+  width:100%;
   position: absolute;
 }
 
